--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
-auto calculate rotation time
-
-add button to blacklist and export them as txt
+add a button to blacklist and export them as txt
 
 pause send when smtp corrupt
-continue after click on button without reloadin the page
+continue after clicking on the button without reloading the page
 
-add drive link to history
+add a drive link to the history
+
+show the number of successes and fails
